# test_pipe

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp
src/: CMakeLists.txt  win_client.cpp  win_client_old.cpp  win_server.cpp  win_service.cpp  win_service_old.cpp
src/pc_pipe/: CMakeLists.txt
src/pc_pipe/src/: client.cpp  service.cpp
src/pc_win/: CMakeLists.txt
src/pc_win/include/: common.hpp
src/pc_win/src/: win_client_old.cpp  win_client_org.cpp  win_server.cpp  win_service_old.cpp  win_service_org.cpp
src/process_tools/: CMakeLists.txt
src/process_tools/include/process_tools/: macro.h  process_helper.h
src/process_tools/src/: process_helper.cpp
src/test/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/process_tools/: test_process_tools.cpp  test_simple.cpp
